@@ -1,3 +1,7 @@
+2010-07-20  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/SNMPServer.pm: Merged from trunk.
+
 2010-07-02  Sancho Lerena <slerena@artica.es>
 
 	* util/pandora_logrotate: Removed logrotate info from agent and
